feat: 移除无用的文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,40 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Virtual Environment
 .venv
-logs
+venv/
+ENV/
+env/
+
+# IDE
+.vscode
+.idea/
+*.swp
+*.swo
+*~
+
+# Testing
 .pytest_cache
 .hypothesis
-.vscode
+.coverage
+htmlcov/
+.tox/
+
+# Logs
+logs/
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Project specific
+config/*.json
+config/*.yaml
+config/*.yml
+!config/.gitkeep
